--- a/config.toml
+++ b/config.toml
@@ -130,9 +130,9 @@ timeZone = 'Asia/Shanghai'
         style = "github"
         lineNos = true
     [markup.tableOfContents]
-        endLevel = 3
-        ordered = false
-        startLevel = 2
+        endLevel = 6
+        ordered = true
+        startLevel = 1
     [markup.goldmark]
         [markup.goldmark.renderer]
             unsafe = true
