--- a/config.toml
+++ b/config.toml
@@ -23,11 +23,11 @@ timeZone = 'Asia/Shanghai'
     # 文章页是否显示其相关系列文章（页面左侧区域）
     isShowRelativePosts = true
     # 导航页是否显示顶部搜索区域
-    isShowShipBoxOfNav = true
+    isShowShipBoxOfNav = false
     # 导航页是否显示站内搜索（站内文章内容检索）
-    isShowLocalSearch = true
+    isShowLocalSearch = false
     # 导航页是否显示最近文章列表
-    isShowRecentPostsOfNav = true
+    isShowRecentPostsOfNav = false
 
     # 激活 cool 模式，酷爽但是消耗资源也更多，
     # 浏览器有缓存，更换后强制页面刷新（快捷键为 Ctrl+Shift+R）一下或重启本地服务即可，
@@ -63,26 +63,26 @@ timeZone = 'Asia/Shanghai'
         link = '/about'
 
     [params.contact]
-        icp = '豫ICP备2023017189号-2'             # 备案号，如果你不想显示，设置为 '' 空即可
+        icp = ''             # 备案号，如果你不想显示，设置为 '' 空即可
         icplink = '//beian.miit.gov.cn'           # 备案链接
-        beian = '豫公网安备 41092802000242号'     # 公安备案，如果你不想显示，设置为 '' 空即可
-        beiancode = '41092802000242'              # 公安备案识别码
-        weibo = '6867589681'                      # e.g. https://weibo.com/u/6867589681
-        # wechat = 'imgs/bg/wechat.jpg'             # 微信二维码地址
-        zhihu = 'loveminimal'                     # e.g. https://www.zhihu.com/people/loveminimal
-        jianshu = 'eebcc2974936'                  # e.g. https://www.jianshu.com/u/eebcc2974936
-        email = 'loveminimal@163.com'
-        github = 'loveminimal'                    # e.g. https://github.com/loveminimal
-        bilibili = '11608450'                     # e.g. https://space.bilibili.com/11608450
-        douyin = 'self'                           # e.g. https://www.douyin.com/user/self
-        xiaohongshu = '60004c750000000001002065'  # e.g. https://www.xiaohongshu.com/user/profile/60004c750000000001002065
+        beian = ''     # 公安备案，如果你不想显示，设置为 '' 空即可
+        beiancode = ''              # 公安备案识别码
+        #weibo = '6867589681'                      # e.g. https://weibo.com/u/6867589681
+        #wechat = 'imgs/bg/wechat.jpg'             # 微信二维码地址
+        #zhihu = 'loveminimal'                     # e.g. https://www.zhihu.com/people/loveminimal
+        #jianshu = 'eebcc2974936'                  # e.g. https://www.jianshu.com/u/eebcc2974936
+        email = 'kylinBachelor@163.com'
+        github = 'kylinBachelor'                    # e.g. https://github.com/loveminimal
+        bilibili = '1865431672'                     # e.g. https://space.bilibili.com/11608450
+        douyin = 'kylinBachelor'                           # e.g. https://www.douyin.com/user/self
+        #xiaohongshu = '60004c750000000001002065'  # e.g. https://www.xiaohongshu.com/user/profile/60004c750000000001002065
         # reddit = 'aituyaa'                        # e.g. https://www.reddit.com/user/aituyaa
-        twitter = 'loveminimal163'                # e.g. https://twitter.com/loveminimal163
+        #twitter = 'loveminimal163'                # e.g. https://twitter.com/loveminimal163
         # mastodon = 'loveminimal'                  #e.g. https://mastodon.social/@loveminimal
         # facebook = 'loveminimal'                  # e.g. https://facebook.com/loveminimal
         # instagram = 'loveminimal163'              # e.g. https://www.instagram.com/loveminimal163
-        youtube = 'aituyaa'                       # e.g. https://www.youtube.com/@aituyaa
-        telegram = 'aituyaa'                      # e.g. https://web.telegram.org/k/#@aituyaa
+        #youtube = 'aituyaa'                       # e.g. https://www.youtube.com/@aituyaa
+        #telegram = 'aituyaa'                      # e.g. https://web.telegram.org/k/#@aituyaa
 
         [params.contact.config]
             color = '#696969'                         # 图标颜色，默认为浅灰色
@@ -97,7 +97,7 @@ timeZone = 'Asia/Shanghai'
     # hugo server -p=1314
     [params.utterances]
         active = false                            # 是否启用评论插件
-        repo = "loveminimal/comment"              # 输入你的仓库名称
+        repo = "kylinBachelor/comment"              # 输入你的仓库名称
         issueTerm = "pathname"
         theme = "github-light"
         crossorigin = "anonymous"
@@ -109,8 +109,8 @@ timeZone = 'Asia/Shanghai'
     # 在 https://giscus.app/ 中，选择配置后会自动生成，如 data-*
     # 默认开启 data-loading="lazy"
     [params.giscus]
-        active = true                             # 是否启用评论插件
-        repo = "loveminimal/comment"              # 输入你的仓库名称
+        active = false                             # 是否启用评论插件
+        repo = "kylinBachelor/comment"              # 输入你的仓库名称
         repoId = "R_kgDOJNJQ8g"
         category="General"
         categoryId="DIC_kwDOJNJQ8s4CYl0m"
