--- a/config.toml
+++ b/config.toml
@@ -68,7 +68,7 @@ timeZone = 'Asia/Shanghai'
         beian = ''     # 公安备案，如果你不想显示，设置为 '' 空即可
         beiancode = ''              # 公安备案识别码
         #weibo = '6867589681'                      # e.g. https://weibo.com/u/6867589681
-        #wechat = 'imgs/bg/wechat.jpg'             # 微信二维码地址
+        wechat = '/img/picture/weixin/beishuanger.jpg'             # 微信二维码地址
         #zhihu = 'loveminimal'                     # e.g. https://www.zhihu.com/people/loveminimal
         #jianshu = 'eebcc2974936'                  # e.g. https://www.jianshu.com/u/eebcc2974936
         email = 'kylinBachelor@163.com'
